--- a/aula04/ex1/index3.html
+++ b/aula04/ex1/index3.html
@@ -14,8 +14,7 @@
     <input type="number" id="num2">
      
    
-    <button onclick="calcprint()"> calcular </button>
-    <p > <span id="result"></span></p>
+    <button onclick="calcprint(Number(document.getElementById('num1').value),Number(document.getElementById('num2').value) )"> calcular </button>
     <p><strong>SOMA</strong> <span id="somaht"></span></p>
     <p><strong>SUBTRAÇÃO</strong> <span id="subht"></span></p>
     <p><strong>MULTIPLICAÇÃO</strong> <span id="multht"></span></p>
